--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
+<!DOCTYPE html>
 <html>
     <head>
         <title>Web Sistema</title>
+        <link rel="stylesheet" type="text/css" href="estiloak/index.css">
     </head>
-    <body>
-        <input type="Button" value="Erregistratu">
-        <input type="Button" value="Identifikatu">     
+    <body>  
+        <a href="orriak/erregistratu.html" class="Erregistratu">Erregistratu</a>
+        <a href="orriak/identifikazioa.html" class="Identifikatu">Identifikatu</a>  
     </body>
 
 </html>
