--- a/index.html
+++ b/index.html
@@ -4,9 +4,17 @@
         <title>Web Sistema</title>
         <link rel="stylesheet" type="text/css" href="estiloak/index.css">
     </head>
-    <body>  
-        <a href="orriak/erregistratu.html" class="Erregistratu">Erregistratu</a>
-        <a href="orriak/identifikazioa.html" class="Identifikatu">Identifikatu</a>  
+    <body> 
+        <div class="login-page">
+            <div class="form">
+                <form class="login-form">
+                    ERABILTZAILEA: <input type="text" placeholder="Zura erabiltzailea sartu"><br>
+                    PASAHITZA: <input type="password" placeholder="Zure pasahitza sartu"><br>
+                    <button>Sartu</button>
+                    <p class="message">Ez zaude erregistratuta? <a href="orriak/erregistratu.html">Erregistratu</a></p>
+                </form> 
+            </div>
+        </div>
     </body>
-
+    
 </html>
