--- a/orriak/erregistratu.html
+++ b/orriak/erregistratu.html
@@ -2,17 +2,21 @@
 <html>
     <head>
         <title>Web Sistema</title>
+        <link rel="stylesheet" type="text/css" href="../estiloak/index.css">
     </head>
     <body>
-        <form>
-            Izen Abizenak: <input type="text" value="Zura erabiltzailea sartu"><br>
-            NAN: <input type="text" value="11111111-Z"><br>
-            Telefonoa: <input type="text"><br>
-            Jaiotze data: <input type="date" ><br>
-            Email: <input type="email"><br>
-            <input type="reset" value="Ezabatu">
-            <input type="submit" value="Sartu">
-        </form>
-        <a href="../index.html">Menura bueltatu</a>
+        <div class="login-page">
+            <div class="form">
+                <form class="resgister-form">
+                            Izen Abizenak: <input type="text" placeholder="Zura erabiltzailea sartu"><br>
+                            NAN: <input type="text" placeholder="11111111-Z"><br>
+                            Telefonoa: <input type="text" placeholder="123456789"><br>
+                            Jaiotze data: <input type="date" ><br>
+                            Email: <input type="email" placeholder="adibidea@enpresa.luzapen"><br>
+                            <button>Erregistratu</button>
+                            <p class="message">Jadanik erregistratuta? <a href="../index.html">Identifikatu</a></p>       
+                </form>
+            </div>
+        </div>
     </body>
 </html>
