--- a/orriak/erregistratu.html
+++ b/orriak/erregistratu.html
@@ -8,11 +8,13 @@
         <div class="login-page">
             <div class="form">
                 <form class="resgister-form">
-                            Izen Abizenak: <input type="text" placeholder="Zura erabiltzailea sartu"><br>
+                            Izen Abizenak: <input type="text" placeholder="Zure erabiltzailea sartu"><br>
                             NAN: <input type="text" placeholder="11111111-Z"><br>
                             Telefonoa: <input type="text" placeholder="123456789"><br>
                             Jaiotze data: <input type="date" ><br>
                             Email: <input type="email" placeholder="adibidea@enpresa.luzapen"><br>
+                            Pasahitza: <input type= "text" placeholder="Sartu zure pasahitza"><br>
+                        
                             <button>Erregistratu</button>
                             <p class="message">Jadanik erregistratuta? <a href="../index.html">Identifikatu</a></p>       
                 </form>
