--- a/index.html
+++ b/index.html
@@ -1,10 +1,20 @@
+<!DOCTYPE html>
 <html>
     <head>
         <title>Web Sistema</title>
+        <link rel="stylesheet" type="text/css" href="estiloak/index.css">
     </head>
-    <body>
-        <input type="Button" value="Erregistratu">
-        <input type="Button" value="Identifikatu">     
+    <body> 
+        <div class="login-page">
+            <div class="form">
+                <form class="login-form">
+                    ERABILTZAILEA: <input type="text" placeholder="Zura erabiltzailea sartu"><br>
+                    PASAHITZA: <input type="password" placeholder="Zure pasahitza sartu"><br>
+                    <button>Sartu</button>
+                    <p class="message">Ez zaude erregistratuta? <a href="orriak/erregistratu.html">Erregistratu</a></p>
+                </form> 
+            </div>
+        </div>
     </body>
-
+    
 </html>
