--- a/orriak/erregistratu.html
+++ b/orriak/erregistratu.html
@@ -15,7 +15,7 @@
                             Email: <input type="email" placeholder="adibidea@enpresa.luzapen"><br>
                             Pasahitza: <input type= "text" placeholder="Sartu zure pasahitza"><br>
                         
-                            <button>Erregistratu</button>
+                            <button type="submit" name="erregistratu">Erregistratu</button>
                             <p class="message">Jadanik erregistratuta? <a href="../index.html">Identifikatu</a></p>       
                 </form>
             </div>
