--- a/orriak/liburu_zerrenda.html
+++ b/orriak/liburu_zerrenda.html
@@ -5,6 +5,11 @@
         <link rel="stylesheet" type="text/css" href="../estiloak/index.css">
     </head>
     <body>
-        
+        <table>
+            <thead>
+            	<th>Izenburua</th>
+            	<th>Idazlea</th>
+            </thead>
+        </table>
     </body>
 </html>
