--- a/orriak/erregistratu.html
+++ b/orriak/erregistratu.html
@@ -8,13 +8,13 @@
         <div class="login-page">
             <div class="form">
                 <form class="resgister-form">
-                            Izen Abizenak: <input type="text" placeholder="Zure erabiltzailea sartu"><br>
-                            NAN: <input type="text" placeholder="11111111-Z"><br>
-                            Telefonoa: <input type="text" placeholder="123456789"><br>
-                            Jaiotze data: <input type="date" ><br>
-                            Email: <input type="email" placeholder="adibidea@enpresa.luzapen"><br>
-                            Pasahitza: <input type= "text" placeholder="Sartu zure pasahitza"><br>
-                        
+                            Izen Abizenak: <input type="text" placeholder="Zure erabiltzailea sartu" required><br>
+                            NAN: <input type="text" placeholder="11111111-Z" required><br>
+                            Telefonoa: <input type="text" placeholder="123456789" required><br>
+                            Jaiotze data: <input type="date" required><br>
+                            Email: <input type="email" placeholder="adibidea@enpresa.luzapen" required><br>
+                            Pasahitza: <input type= "password" placeholder="Sartu zure pasahitza" required><br>
+                            Konfirmazioa: <input type= "password" placeholder="Sartu zure pasahitza berriz ere" required><br>
                             <button type="submit" name="erregistratu">Erregistratu</button>
                             <p class="message">Jadanik erregistratuta? <a href="../index.html">Identifikatu</a></p>       
                 </form>
