--- a/orriak/user_menu/liburu_zerrenda.html
+++ b/orriak/user_menu/liburu_zerrenda.html
@@ -3,7 +3,7 @@
 <html>
     <head>
         <title>Web Sistema</title>
-        <link rel="stylesheet" type="text/css" href="../estiloak/index.css">
+        <link rel="stylesheet" type="text/css" href="../../estiloak/index.css">
     </head>
     <body>
         <table>
