--- a/app/orriak/erregistratu.html
+++ b/app/orriak/erregistratu.html
@@ -7,16 +7,16 @@
     <body>
         <div class="login-page">
             <div class="form">
-                <form class="resgister-form">
-                            Izen Abizenak: <input type="text" placeholder="Zure erabiltzailea sartu" required><br>
-                            NAN: <input type="text" placeholder="11111111-Z" required><br>
-                            Telefonoa: <input type="text" placeholder="123456789" required><br>
-                            Jaiotze data: <input type="date" required><br>
-                            Email: <input type="email" placeholder="adibidea@enpresa.luzapen" required><br>
-                            Pasahitza: <input type= "password" placeholder="Sartu zure pasahitza" required><br>
-                            Konfirmazioa: <input type= "password" placeholder="Sartu zure pasahitza berriz ere" required><br>
-                            <button type="submit" name="erregistratu">Erregistratu</button>
-                            <p class="message">Jadanik erregistratuta? <a href="../index.html">Identifikatu</a></p>       
+                <form class="resgister-form" method="post">
+                    Izen Abizenak: <input type="text" placeholder="Zure erabiltzailea sartu" required><br>
+                    NAN: <input type="text" placeholder="11111111-Z" required><br>
+                    Telefonoa: <input type="text" placeholder="123456789" required><br>
+                    Jaiotze data: <input type="date" required><br>
+                    Email: <input type="email" placeholder="adibidea@enpresa.luzapen" required><br>
+                    Pasahitza: <input type= "password" placeholder="Sartu zure pasahitza" required><br>
+                    Konfirmazioa: <input type= "password" placeholder="Sartu zure pasahitza berriz ere" required><br>
+                    <button type="submit" name="erregistratu">Erregistratu</button>
+                    <p class="message">Jadanik erregistratuta? <a href="../index.html">Identifikatu</a></p>       
                 </form>
             </div>
         </div>
