--- a/app/orriak/user_menu/user_menu.html
+++ b/app/orriak/user_menu/user_menu.html
@@ -9,7 +9,7 @@
             <div class="botoi_panel">
                 <button>Nire datuak aldatu</button>
                 <button>Liburuen zerrenda ikusi</button>
-                <button>Liburua gehitu</button>
+                <button><a href="./liburu_gehitu.html">Liburua gehitu</a></button>
                 <button><a href="../../index.html">Atera</a></button>
             </div>
         </div>
