--- a/app/orriak/erregistratu.html
+++ b/app/orriak/erregistratu.html
@@ -10,7 +10,7 @@
 		    <div class="form">
 			<form class="resgister-form" id="formulario" method="post" action="../php/erregistratu.php">
 			    <div class="formulario__grupo" id="grupo__izena"> 
-			    	Izen Abizenak: <input type="text" name="Izena" placeholder="Zure erabiltzailea sartu" required>
+			    	Izen Abizenak (erabiltzailea): <input type="text" name="Izena" placeholder="Zure erabiltzailea sartu" required>
 			    </div>
 			    <div class="formulario__grupo" id="grupo__nan">
 			   		NAN: <input type="text" name="NAN" placeholder="11111111-Z" required>
