--- a/app/orriak/user_menu/user_menu.html
+++ b/app/orriak/user_menu/user_menu.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Web Sistema</title>
+        <link rel="stylesheet" type="text/css" href="../../estiloak/general.css">
         <link rel="stylesheet" type="text/css" href="../../estiloak/user_menu/user_menu.css">
     </head>
     <body>
