--- a/app/orriak/erregistratu.html
+++ b/app/orriak/erregistratu.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Web Sistema</title>
+		<link rel="stylesheet" type="text/css" href="../estiloak/general.css">
         <link rel="stylesheet" type="text/css" href="../estiloak/index.css">
     </head>
     <body>
